--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 HELP.md
+.mvn
 target/
-.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
@@ -12,7 +12,7 @@ target/
 .settings
 .springBeans
 .sts4-cache
-
+.gitignore
 ### IntelliJ IDEA ###
 .idea
 *.iws
