--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <groupId>com.xbot</groupId>
-    <artifactId>xbot</artifactId>
+    <artifactId>xbot-server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>xbot</name>
     <description>xbot</description>
@@ -17,7 +17,6 @@
     <properties>
         <java.version>17</java.version>
         <springdoc.version>2.8.5</springdoc.version>
-        <hutool.version>5.8.35</hutool.version>
     </properties>
 
     <dependencies>
@@ -44,7 +43,7 @@
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
-            <version>${hutool.version}</version>
+            <version>5.8.40</version>
         </dependency>
 
         <dependency>
